force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>분할 입금 추적 (1 Order : N Payments). FR-AR-001.</description>
    <label>입금</label>
    <nameField>
        <displayFormat>PAY-{0000}</displayFormat>
        <label>입금 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>입금</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>