force-app/main/default/objects/Payment__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <description>입금 관련 메모 (선택).</description>
    <label>메모</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>