force-app/main/default/objects/Payment__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>입금 대상 주문 (Order). 1 Order : N Payments.</description>
    <label>주문</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>입금 내역</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>