force-app/main/default/objects/Payment__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <description>입금 금액 (KRW, 소수자리 없음).</description>
    <label>입금금액</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>