force-app/main/default/objects/Payment__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <description>입금일자.</description>
    <label>입금일자</label>
    <required>true</required>
    <type>Date</type>
</CustomField>