force-app/main/default/objects/Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>입금 상태. FR-AR-001 기본값 Paid.</description>
    <label>상태</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <label>대기</label>
            </value>
            <value>
                <fullName>Paid</fullName>
                <default>true</default>
                <label>입금완료</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>취소</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>